--- a/AppStore clone- task for SmartBank/SupportingFiles/Base.lproj/LaunchScreen.storyboard
+++ b/AppStore clone- task for SmartBank/SupportingFiles/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="safari" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0yw-0Z-1a3">
-                                <rect key="frame" x="76" y="255" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="safari" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0yw-0Z-1a3">
+                                <rect key="frame" x="106.66666666666669" y="237" width="180" height="178.66666666666669"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="5rc-4w-aky"/>
+                                    <constraint firstAttribute="height" constant="180" id="mjV-CH-Onf"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0yw-0Z-1a3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-100" id="k0I-53-K4v"/>
+                            <constraint firstItem="0yw-0Z-1a3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pjV-Ab-sDW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
